<resources>
    <string name="app_name">Logwinder</string>
    <string name="title_activity_navigation2">Navigation2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Electrodomésticos -->
    <string name="frigorifico">Frigorifico</string>
    <string name="Congelador">Congelador</string>
    <string name="Horno">Horno</string>
    <string name="microondas">Microondas</string>
    <string name="Lavadora">Lavadora</string>
    <string name="Lavavajillas">Lavavajillas</string>
    <string name="secadora">Secadora</string>
    <string name="vitroceramica">Vitroceramica</string>
    <string name="caldera">Caldera</string>
    <string name="aire">Aire Acondicionado</string>
    <string name="radiador">Radiador</string>
    <string name="plancha">Plancha</string>
    <string name="aspiradora">Aspiradora</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Preference Titles -->
    <string name="mis_datos_header">Mis datos</string>
    <string name="opciones_header">Opciones</string>

    <!-- Strings para control sonido -->
    <string name="activar_sonido">Activar sonido</string>
    <string name="descripcion_activar_sonido_on">Activar sonido</string>
    <string name="descripcion_activar_sonido_off">Activar inactivo</string>

    <!-- Strings para control email -->
    <string name="correo_electronico">Email</string>
    <string name="descripcion_correo_electronico">Aqui se guardara el correo electronico</string>
    <string name="texto_cuadro_correo_electronico">Introduce aquí tu email</string>

    <!-- Strings para sexo -->
    <string name="casa">Casa</string>
    <string name="descripcion_casa">Aqui se guardara su tipo de casa</string>

    <!-- Strings para electrodomesticos -->
    <string name="electro">Electrodomesticos</string>
    <string name="descripcion_electrodomesticos">Aqui se guardara el electrodomestico que mas se usa</string>

    <!-- Strings para notificaciones -->
    <string name="activar_notificaciones">Activar notificaciones</string>
    <string name="descripcion_acticvar_notificaciones">Aqui se indicara si se activan las notificaciones</string>

</resources>